--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,37 @@
 
 .navigation{
   margin-right: 15px;
+    color: #FFF;
+    text-decoration: none;
+    font: 20px Raleway;
+    margin: 0px 10px;
+    padding: 10px 10px;
+    position: relative;
+    z-index: 0;
+    cursor: pointer;
+    content: "";
+    opacity: 1;
+    transition: all 0.3s; 
+}
+
+.navigation:hover{
+  background-color: rgb(241, 240, 237);
+  color: #141414;
+  border-radius: 5px;
+  text-decoration: none;
+  font: 20px Raleway;
+  margin: 0px 10px;
+  padding: 10px 10px;
+  position: relative;
+  cursor: pointer;
+  opacity: 1;
+  transition: all 0.3s;
+  position: relative;
+  z-index: 0;
 }
 
 .nav{
-  background-color: black;
+  background: #72797a;
   color: white;
   padding: 15px;
 }
