--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,22 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
+
+
+
 .root{
   background-color: antiquewhite;
   margin: 5px;
   padding: 20px;
+  --black-gradient: linear-gradient(
+    144.39deg,
+    #ffffff -278.56%,
+    #6d6d6d -78.47%,
+    #11101d 91.61%
+  );
+  --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
+  
 }
 
 
@@ -20,8 +35,7 @@
     cursor: pointer;
     content: "";
     opacity: 1;
-    transition: all 0.3s; 
-    
+    transition: all 0.3s;    
 }
 
 .navigation:hover{
@@ -142,4 +156,21 @@
         line-height: inherit;
         color: inherit;
     }
+}
+
+
+
+
+/* ######################################### BLOGCOMPONENT ######################################### */
+
+.blog-card{
+    margin: 2rem;
+    padding: 1rem;
+    border-radius: 5px;
+    background-color: #FFF;
+    width: 40%;
+}
+
+.blog-image img{
+    border-radius: 15px;
 }
